--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 	      <h1 class="display-5 fw-bold lh-1 mb-3">Welcome to<br> twit-clone</h1>
 	      <p class="lead">Place where you can express your opinions and see what others think about it.</p>
 	      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-	        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button>
+	        <a href="{{ url_for('register') }}" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</a>
 	      </div>
 	    </div>
 	  </div>
