--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,8 +3,8 @@
 {% block content %}
     <table>
         <tr valign="top">
-            <td><img src="{% if current_user.avatar_img %}
-                {% set path = 'avatars/' + current_user.avatar_img %}
+            <td><img src="{% if user.avatar_img %}
+                {% set path = 'avatars/' + user.avatar_img %}
                 {{ url_for('static', filename=path) }}
             {% else %}
                     {{ user.avatar(128) }}
@@ -12,21 +12,64 @@
             <td>
                 <h1>User: {{ user.username }}</h1>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-                {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
+                <p>followers: {{ user.followers.count() }}, 
+                following: {{ user.followed.count() }}</p>
             </td>
             <td>
-                <p><a href="{{ url_for('change_password') }}">change password</a></p>
-                <p><a href="{{ url_for('upload_image') }}">Upload avatar image</a></p>
+                {% if current_user == user %}
+                    <p><a href="{{ url_for('edit_profile') }}">Edit Profile</a></p>
+                    <p><a href="{{ url_for('change_password') }}">change password</a></p>
+                    <p><a href="{{ url_for('upload_image') }}">Upload avatar image</a></p>
+                    {% if current_user.avatar_img %}
+                    <p>
+                        <form action="{{ url_for('delete_image') }}" method="post">
+                            {{ form.hidden_tag() }}
+                            {{ form.submit(value='Delete Image') }}
+                        </form>
+                    </p>
+                    {% endif %}
+                {% else %}
+                    {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
+                    {% if not current_user.is_following(user) %}
+                    <p>
+                        <form action="{{ url_for('follow', username=user.username) }}" method="post">
+                            {{ form.hidden_tag() }}
+                            {{ form.submit(value='Follow') }}
+                        </form>
+                    </p>
+                    {% else %}
+                    <p>
+                        <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+                            {{ form.hidden_tag() }}
+                            {{ form.submit(value='Unfollow') }}
+                        </form>
+                    </p>
+                    {% endif %}
+                {% endif %}
             </td>
         </tr>
     </table>
-    <hr>
-    {% for post in posts %}
+    {% if current_user == user %}
     <table>
-        <tr valign="top">
-            <td><img src="{{ post.author.avatar(36) }}"></td>
-            <td>{{ post.author.username }} says:<br>{{ post.body }}</td>
+        <tr>
+            <form action="" method="post">
+              {{ post_form.hidden_tag() }}
+              <p>
+                  {{ post_form.post.label }}
+                  {{ post_form.post() }}
+                  {% for error in post_form.post.errors %}
+                    <div class="text-danger">
+                        {{ error }}
+                    </div>
+                  {% endfor %}
+              </p>
+               {{ post_form.submit(class_='btn btn-primary')}}
+            </form>
         </tr>
     </table>
+    {% endif %}
+    <hr>
+    {% for post in posts %}
+        {% include "_post.html" %}
     {% endfor %}
 {% endblock %}
