--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,11 @@
 	<!-- Bootstrap -->
 	<!-- CSS only -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+	<style type="text/css">
+		a {
+			color: black;
+			text-decoration: none;
+		}
 	</style>
 </head>
 <body>
@@ -20,7 +25,7 @@
 	      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 	        <li><a href="{{ url_for('index') }}" class="nav-link px-2 text-secondary">Twit-clone</a></li>
 	        {% if current_user.is_anonymous %}
-
+	        
 	        {% else %}
 	        <li>
 	        	<a href="{{ url_for('user', username=current_user.username) }}" 
@@ -36,6 +41,9 @@
 	        	<a href="{{ url_for('my_feed') }}" class="nav-link px-2 text-white">Feed</a>
 	        </li>
 	        {% endif %}
+	        <li>
+        		<a href="{{ url_for('articles') }}" class="nav-link px-2 text-white">Articles</a>
+        	</li>
 	      </ul>
 
 	      <!--
