--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="display-5">Articles</h1>
+    <h1 class="display-5">{{ _('Articles') }}</h1>
     <hr>
     {% for article in articles %}
         {% include "_header_articles.html" %}
