--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1 class="display-5">Change Password</h1>
+	<h1 class="display-5">{{ _('Change Password') }}</h1>
 	<form action="" method="post">
 		{{ form.hidden_tag() }}
 		<div class="col-lg-6">
