--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1 class="display-5">Edit Profile</h1>
+	<h1 class="display-5">{{ _('Edit Profile') }}</h1>
 	<form action="" method="post">
         {{ form.hidden_tag() }}
         <div class="col-lg-6">
