--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1 class="display-5">Sign In</h1>
+	<h1 class="display-5">{{ _('Sign In') }}</h1>
 	<form action="" method="post">
         {{ form.hidden_tag() }}
         <div class="col-lg-6">
@@ -30,5 +30,9 @@
         {{ form.submit(class_='btn btn-primary') }}
         </div>
     </form>
-    <p class="mt-3">New here? <a href="{{ url_for('register') }}">Sign up!</a></p>
+    <p class="mt-3">{{ _('New here?') }} <a href="{{ url_for('register') }}">{{ _('Sign up!') }}</a></p>
+    <p>
+    	{{ _('Forgot your password?') }}
+    	<a href="{{ url_for('reset_password_request') }}">{{ _('Reset it') }}</a>
+    </p>
 {% endblock %}
