--- a/app/templates/my_feed.html
+++ b/app/templates/my_feed.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="display-5">Your Feed</h1>
+    <h1 class="display-5">{{ _('Your Feed') }}</h1>
     <hr>
     {% for post in posts %}
         {% include "_post.html" %}
