--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -17,10 +17,10 @@
             </td>
             <td>
                 {% if current_user == user %}
-                    <p><a href="{{ url_for('edit_profile') }}">Edit Profile</a></p>
-                    <p><a href="{{ url_for('change_password') }}">change password</a></p>
-                    <p><a href="{{ url_for('upload_image') }}">Upload avatar image</a></p>
-                    <p><a href="{{ url_for('create_article') }}">Create an article</a></p>
+                    <p><a href="{{ url_for('edit_profile') }}">{{ _('Edit Profile') }}</a></p>
+                    <p><a href="{{ url_for('change_password') }}">{{ _('change password') }}</a></p>
+                    <p><a href="{{ url_for('upload_image') }}">{{ _('Upload avatar image') }}</a></p>
+                    <p><a href="{{ url_for('create_article') }}">{{ _('Create an article') }}</a></p>
                     {% if current_user.avatar_img %}
                     <p>
                         <form action="{{ url_for('delete_image') }}" method="post">
@@ -30,7 +30,12 @@
                     </p>
                     {% endif %}
                 {% else %}
-                    {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
+                    {% if user.last_seen %}
+                        <p>
+                            {{ _('Last seen on:') }} 
+                            {{ moment(user.last_seen).format('LLL') }}
+                        </p>{
+                    % endif %}
                     {% if not current_user.is_following(user) %}
                     <p>
                         <form action="{{ url_for('follow', username=user.username) }}" method="post">
