--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -10,7 +10,7 @@
                     {{ user.avatar(128) }}
             {% endif %} "></td>
             <td>
-                <h1>User: {{ user.username }}</h1>
+                <h1>{{ _('User:') }} {{ user.username }}</h1>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 <p>followers: {{ user.followers.count() }}, 
                 following: {{ user.followed.count() }}</p>
@@ -18,9 +18,9 @@
             <td>
                 {% if current_user == user %}
                     <p><a href="{{ url_for('edit_profile') }}">{{ _('Edit Profile') }}</a></p>
-                    <p><a href="{{ url_for('change_password') }}">{{ _('change password') }}</a></p>
-                    <p><a href="{{ url_for('upload_image') }}">{{ _('Upload avatar image') }}</a></p>
-                    <p><a href="{{ url_for('create_article') }}">{{ _('Create an article') }}</a></p>
+                    <p><a href="{{ url_for('change_password') }}">{{ _('Change Password') }}</a></p>
+                    <p><a href="{{ url_for('upload_image') }}">{{ _('Upload Avatar Image') }}</a></p>
+                    <p><a href="{{ url_for('create_article') }}">{{ _('Create an Article') }}</a></p>
                     {% if current_user.avatar_img %}
                     <p>
                         <form action="{{ url_for('delete_image') }}" method="post">
@@ -35,7 +35,7 @@
                             {{ _('Last seen on:') }} 
                             {{ moment(user.last_seen).format('LLL') }}
                         </p>{
-                    % endif %}
+                    {% endif %}
                     {% if not current_user.is_following(user) %}
                     <p>
                         <form action="{{ url_for('follow', username=user.username) }}" method="post">
