--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,11 +11,13 @@
 	      <p class="lead">
 	    	{{ _('Place where you can express your opinions and see what others think about it.') }}
 	      </p>
+	      {% if current_user.is_anonymous %}
 	      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
 	        <a href="{{ url_for('register') }}" class="btn btn-primary btn-lg px-4 me-md-2">
 	        	{{ _('Sign up') }}
 	        </a>
 	      </div>
+	      {% endif %}
 	    </div>
 	  </div>
 	</div>
