--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 	<h1>{{ _('Search Results') }}</h1>
-	{% for post in posts %}
-		{% include '_post.html' %}
-	{% endfor %}
+    {% if posts %}
+    	{% for post in posts %}
+    		{% include '_post.html' %}
+    	{% endfor %}
+    {% elif articles %}
+        {% for article in articles %}
+            {% include '_header_articles.html' %}
+        {% endfor %}
+    {% endif %}
 {% endblock %}
