--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -30,9 +30,9 @@
         {{ form.submit(class_='btn btn-primary') }}
         </div>
     </form>
-    <p class="mt-3">{{ _('New here?') }} <a href="{{ url_for('register') }}">{{ _('Sign up!') }}</a></p>
+    <p class="mt-3">{{ _('New here?') }} <a href="{{ url_for('auth.register') }}">{{ _('Sign up!') }}</a></p>
     <p>
     	{{ _('Forgot your password?') }}
-    	<a href="{{ url_for('reset_password_request') }}">{{ _('Reset it') }}</a>
+    	<a href="{{ url_for('auth.reset_password_request') }}">{{ _('Reset it') }}</a>
     </p>
 {% endblock %}
