--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
 	      </p>
 	      {% if current_user.is_anonymous %}
 	      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-	        <a href="{{ url_for('register') }}" class="btn btn-primary btn-lg px-4 me-md-2">
+	        <a href="{{ url_for('auth.register') }}" class="btn btn-primary btn-lg px-4 me-md-2">
 	        	{{ _('Sign up') }}
 	        </a>
 	      </div>
