--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -3,5 +3,5 @@
 {% block content %}
 	<h1>{{ _('Unexpected error occured while processing the request') }}</h1>
 	<p>{{ _('The administrator has been notified. Sorry for the inconvenience!') }}</p>
-    <p><a href="{{ url_for('index') }}">{{ _('Back') }}</a></p>
+    <p><a href="{{ url_for('main.index') }}">{{ _('Back') }}</a></p>
 {% endblock %}
