--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -17,13 +17,13 @@
             </td>
             <td>
                 {% if current_user == user %}
-                    <p><a href="{{ url_for('edit_profile') }}">{{ _('Edit Profile') }}</a></p>
-                    <p><a href="{{ url_for('change_password') }}">{{ _('Change Password') }}</a></p>
-                    <p><a href="{{ url_for('upload_image') }}">{{ _('Upload Avatar Image') }}</a></p>
-                    <p><a href="{{ url_for('create_article') }}">{{ _('Create an Article') }}</a></p>
+                    <p><a href="{{ url_for('main.edit_profile') }}">{{ _('Edit Profile') }}</a></p>
+                    <p><a href="{{ url_for('auth.change_password') }}">{{ _('Change Password') }}</a></p>
+                    <p><a href="{{ url_for('main.upload_image') }}">{{ _('Upload Avatar Image') }}</a></p>
+                    <p><a href="{{ url_for('main.create_article') }}">{{ _('Create an Article') }}</a></p>
                     {% if current_user.avatar_img %}
                     <p>
-                        <form action="{{ url_for('delete_image') }}" method="post">
+                        <form action="{{ url_for('main.delete_image') }}" method="post">
                             {{ form.hidden_tag() }}
                             {{ form.submit(value='Delete Image') }}
                         </form>
@@ -38,14 +38,14 @@
                     {% endif %}
                     {% if not current_user.is_following(user) %}
                     <p>
-                        <form action="{{ url_for('follow', username=user.username) }}" method="post">
+                        <form action="{{ url_for('main.follow', username=user.username) }}" method="post">
                             {{ form.hidden_tag() }}
                             {{ form.submit(value='Follow') }}
                         </form>
                     </p>
                     {% else %}
                     <p>
-                        <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+                        <form action="{{ url_for('main.unfollow', username=user.username) }}" method="post">
                             {{ form.hidden_tag() }}
                             {{ form.submit(value='Unfollow') }}
                         </form>
